--- a/AdverstingPlatforms/appsettings.json
+++ b/AdverstingPlatforms/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FilePath": "C:\\Users\\z0nt1k02\\Desktop\\AdverstingCompanies.txt"
 }
